Dean hariç tamamlandı

--- a/index.html
+++ b/index.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giriş Yap</title>
+    <title>Giriş Yap - Kütahya Dumlupınar Üniversitesi</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
 <div class="container">
 
     <div class="top-content">
-        <div class="logo-icon">📘</div>
+        <div class="logo-icon">
+            <i class="fa-solid fa-book"></i>
+        </div>
         <h2 class="uni">Kütahya Dumlupınar Üniversitesi</h2>
         <p class="subtitle">Mühendislik Fakültesi Ders Programı</p>
     </div>
 
-    <div class="login-card">
+    <form id="loginForm" class="login-card">
+        
         <label class="input-label">E-posta</label>
         <div class="input-field">
             <span class="icon">✉️</span>
-            <input type="email" placeholder="ornek@email.com" required>
+            <input type="email" id="email" placeholder="ornek@email.com" required>
         </div>
 
         <label class="input-label">Şifre</label>
         <div class="input-field">
             <span class="icon">🔒</span>
-            <input type="password" placeholder="********" required>
+            <input type="password" id="password" placeholder="********" required>
         </div>
 
-        <button class="login-btn">Giriş Yap</button>
-    </div>
+        <div id="error-message" class="error-box">
+            Email veya şifre hatalı!
+        </div>
+
+        <button type="submit" class="login-btn">Giriş Yap</button>
+    </form>
 
 </div>
+
+<script src="js/login.js"></script>
 
 </body>
 </html>
