Sayfaların genel teması düzeltildi

--- a/department_rep/courses.html
+++ b/department_rep/courses.html
@@ -25,7 +25,7 @@
             <a href="rep_dashboard.html" class="menu-item">
                 <i class="fa-solid fa-border-all"></i> Genel Bakış
             </a>
-            <a href="#" class="menu-item">
+            <a href="course_schedule_creator.html" class="menu-item">
                 <i class="fa-regular fa-calendar"></i> Ders Programı
                 <span class="menu-badge">17</span>
             </a>
@@ -35,7 +35,7 @@
             <a href="#" class="menu-item">
                 <i class="fa-solid fa-users"></i> Akademisyenler
             </a>
-            <a href="#" class="menu-item">
+            <a href="../dean/halls.html" class="menu-item">
                 <i class="fa-solid fa-building"></i> Sınıflar
             </a>
             <a href="#" class="menu-item">
