--- a/department_rep/rep_dashboard.html
+++ b/department_rep/rep_dashboard.html
@@ -35,7 +35,7 @@
             <a href="#" class="menu-item">
                 <i class="fa-solid fa-users"></i> Akademisyenler
             </a>
-            <a href="#" class="menu-item">
+            <a href="../dean/halls.html" class="menu-item">
                 <i class="fa-solid fa-building"></i> Sınıflar
             </a>
             <a href="#" class="menu-item">
