eksiklikler ve yanlışlıklar giderildi

--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -31,7 +31,6 @@
             </a>
             <a href="department_identification.html" class="menu-item">
                 <i class="fa-solid fa-building"></i> Bölüm Tanımlama
-            </a>
         </nav>
 
         <div class="logout-area">
@@ -53,7 +52,7 @@
                     <div class="avatar">MD</div>
                     <div class="user-info">
                         <span class="name">Arş. Gör. Mehmet Demir</span>
-                        <span class="role">Bölüm Temsilcisi</span>
+                        <span class="role">Admin</span>
                     </div>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
