--- a/admin/department_identification.html
+++ b/admin/department_identification.html
@@ -53,7 +53,7 @@
                     <div class="avatar">MD</div>
                     <div class="user-info">
                         <span class="name">Arş. Gör. Mehmet Demir</span>
-                        <span class="role">Bölüm Temsilcisi</span>
+                        <span class="role">Admin</span>
                     </div>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
