--- a/admin/user_add.html
+++ b/admin/user_add.html
@@ -22,23 +22,14 @@
         </div>
 
         <nav class="menu">
-            <a href="../department_rep/rep_dashboard.html" class="menu-item">
-                <i class="fa-solid fa-border-all"></i> Genel Bakış
-            </a>
-            <a href="../department_rep/course_schedule_creator.html" class="menu-item">
-                <i class="fa-regular fa-calendar"></i> Ders Programı
-            </a>
-            <a href="../department_rep/courses.html" class="menu-item">
-                <i class="fa-solid fa-book-open"></i> Dersler
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fa-solid fa-users"></i> Akademisyenler
-            </a>
-            <a href="../dean/halls.html" class="menu-item">
-                <i class="fa-solid fa-building"></i> Sınıflar
+            <a href="admin_dashboard.html" class="menu-item">
+                <i class="fa-solid fa-user-group"></i> Kullanıcı Listesi
             </a>
             <a href="user_add.html" class="menu-item active">
                 <i class="fa-solid fa-user-plus"></i> Yeni Kullanıcı Ekle
+            </a>
+            <a href="department_identification.html" class="menu-item ">
+                <i class="fa-solid fa-building"></i> Bölüm Tanımlama
             </a>
         </nav>
 
@@ -61,7 +52,7 @@
                     <div class="avatar">MD</div>
                     <div class="user-info">
                         <span class="name">Arş. Gör. Mehmet Demir</span>
-                        <span class="role">Bölüm Temsilcisi</span>
+                        <span class="role">Admin</span>
                     </div>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
