--- a/dean/dean_dashboard.html
+++ b/dean/dean_dashboard.html
@@ -23,23 +23,14 @@
         </div>
 
         <nav class="menu">
-            <a href="../department_rep/rep_dashboard.html" class="menu-item">
+            <a href="dean_dashboard.html" class="menu-item active">
                 <i class="fa-solid fa-border-all"></i> Genel Bakış
             </a>
-            <a href="../department_rep/course_schedule_creator.html" class="menu-item">
-                <i class="fa-regular fa-calendar"></i> Ders Programı
-            </a>
-            <a href="../department_rep/courses.html" class="menu-item">
-                <i class="fa-solid fa-book-open"></i> Dersler
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fa-solid fa-users"></i> Akademisyenler
+            <a href="tumprogramlar.html" class="menu-item">
+                <i class="fa-solid fa-book-open"></i> Tüm Programlar
             </a>
             <a href="halls.html" class="menu-item">
                 <i class="fa-solid fa-building"></i> Sınıflar
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fa-regular fa-comment-dots"></i> Talepler
             </a>
         </nav>
 
@@ -62,7 +53,7 @@
                     <div class="avatar">MD</div>
                     <div class="user-info">
                         <span class="name">Arş. Gör. Mehmet Demir</span>
-                        <span class="role">Bölüm Temsilcisi</span>
+                        <span class="role">Dekan</span>
                     </div>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
